# ezstream

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  aclocal.m4  autogen.sh  circle.yml  configure.ac  configure.in  gen-coverage-report.sh  mkcl.sh
.circleci/: config.yml
build-aux/: Makefile.am
compat/: Makefile.am  compat.h  getopt.c  reallocarray.c  strlcat.c  strtonum.c
compat/sys/: Makefile.am  tree.3
conf/: Makefile.am  ezstream_m3u.xml  ezstream_mp3.xml  ezstream_reencoding_example.xml  ezstream_reencoding_example_mp3.xml  ezstream_reencoding_example_theora.xml  ezstream_reencoding_example_vorbis.xml  ezstream_vorbis.xml
doc/: Makefile.am  ezstream-cfgmigrate.1.in.in  ezstream-file.sh.1.in.in  ezstream.1.in  ezstream.1.in.in
examples/: Makefile.am  artist.txt  ezstream-file_template.xml  ezstream-full.xml  ezstream-metadata.xml  ezstream-minimal.xml  ezstream-stdin.xml  ezstream-video.xml  ezstream_metadata.xml  ezstream_mp3.xml  ezstream_reencode_mp3.xml  ezstream_reencode_theora.xml  ezstream_reencode_vorbis.xml  ezstream_stdin_vorbis.xml  ezstream_vorbis.xml  meta.sh  metadata.txt  play.sh  playlist-logger.sh  title.txt
m4/: Makefile.am  attribute.m4  ccflags.m4  libogg.m4  libshout.m4  libvorbis.m4  libxml2.m4  ogg.m4  progname.m4  shout.m4  taglib.m4  tree.m4  vacopy.m4  vars.m4  vorbis.m4  xiph_compiler.m4  xiph_path_python.m4  xiph_xml2.m4
src/: Makefile.am  attr_config.h  attr_config.h.in  attributes.h  cfg.c  cfg.h  cfg_decoder.c  cfg_decoder.h  cfg_encoder.c  cfg_encoder.h  cfg_intake.c  cfg_intake.h  cfg_private.h  cfg_server.c  cfg_server.h  cfg_stream.c  cfg_stream.h  cfg_xmlfile.c  cfg_xmlfile.h  cfgfile_xml.c  cfgfile_xml.h  cmdline.c  cmdline.h  compat.c  compat.h  config.h  configfile.c  configfile.h  ezconfig0.c  ezconfig0.h  ezsignals.h  ezstream-cfgmigrate.c  ezstream-file.sh.in  ezstream.c  ezstream.h  getopt.c  getopt.h  local_basename.c  local_basename.h  log.c  (+18 more)
src/.deps/: configfile.Po  ezstream.Po
tests/: .test17ogg  Makefile.am  bad-executable.sh  check_cfg.c  check_cfg.h  check_cfg_decoder.c  check_cfg_encoder.c  check_cfg_intake.c  check_cfg_server.c  check_cfg_stream.c  check_cfg_xmlfile.c  check_cfgfile_xml.c  check_cmdline.c  check_ezstream.c  check_log.c  check_mdata.c  check_playlist.c  check_stream.c  check_util.c  check_xalloc.c  config-bad.xml  config-bad2.xml  config-bad4.xml  config-bad5.xml  config-bad6.xml  config-ok.xml  null.raw  play-bad.sh  playlist-bad2.txt  playlist.txt  test-meta01.sh  test-meta03-huge.sh  test-meta04-kill.sh
tests/integration/: ezcfg-test1.xml  icecast.xml  test-ezstream.rb  tests.m3u
win32/: Makefile.am  README.win32  compat.h  config.h  ezstream.1.html  ezstream.dsp  ezstream.dsw  ezstream.iss  ezstream.sln  ezstream.vcproj  libflac.vcproj  libogg.vcproj  libshout.vcproj  libspeex.vcproj  libtheora.vcproj  libvorbis.vcproj  libvorbisfile.vcproj  libz.vcproj  taglib.vcproj  taglib_c.vcproj  tfile.cpp
win32/shout/: Makefile.am  shout.h
