## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

CLEANFILES = core *.core *~ .*~

examplesdir = @EXAMPLES_DIR@
dist_examples_DATA = ezstream_mp3.xml ezstream_reencoding_example_mp3.xml \
		     ezstream_reencoding_example_theora.xml \
		     ezstream_reencoding_example_vorbis.xml ezstream_vorbis.xml
