AUTOMAKE_OPTIONS = 1.9 foreign

examplesdir =	@EXAMPLES_DIR@
dist_examples_DATA = ezstream_mp3.xml ezstream_reencode_mp3.xml \
		ezstream_reencode_theora.xml ezstream_reencode_vorbis.xml \
		ezstream_stdin_vorbis.xml ezstream_vorbis.xml \
		ezstream_metadata.xml
dist_examples_SCRIPTS = meta.sh play.sh

CLEANFILES =	core *.core *~ .*~
