AUTOMAKE_OPTIONS = 1.10 foreign subdir-objects

examplesdir	 = @EXAMPLES_DIR@
dist_examples_DATA = \
	ezstream-file_template.xml \
	ezstream-full.xml \
	ezstream-minimal.xml \
	ezstream-video.xml \
	metadata.txt \
	artist.txt \
	title.txt
dist_examples_SCRIPTS = meta.sh play.sh playlist-logger.sh

CLEANFILES	 = core *.core *~ .*~
